config setup.py and pyproject.toml

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 name = cnumber
 description = A library to handel operations with complex number.
 author = Alex Mboutchouang
+author_email = mboutchouangalex@gmail.com
 license = MIT
 version = attr: cnumber.__version__
 long_description = file: README.md
@@ -21,4 +22,10 @@ install_requires =
     setuptools
 
 [options.packages.find]
-where = .
+exclude =
+    tests*
+
+[options.extras_require]
+test =
+    pytest
+    coverage
