--- a/setup.cfg
+++ b/setup.cfg
@@ -29,3 +29,12 @@ exclude =
 test =
     pytest
     coverage
+
+[flake8]
+ignore = E305
+exclude = 
+    .git,
+    __pycache__,
+    venv,
+    .tox
+max-line-length = 90
