--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
 isolated_build = true
-envlist = py37, pypy3
+envlist = python3.7
 
 
 [testenv]
+deps = pytest
 commands =
     pytest tests
